[gd_scene load_steps=6 format=2]

[ext_resource path="res://background.gd" type="Script" id=1]
[ext_resource path="res://roboto/Roboto-Black.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[node name="background" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Score_label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_right = 50.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.0
margin_top = -241.0
margin_right = 236.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 2 )
text = "Space Guy
"
align = 1
valign = 1

[node name="Play_button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -200.0
margin_right = 100.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 3 )
text = "PLAY"

[node name="message_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="Play_button" to="." method="_on_Play_button_pressed"]
[connection signal="timeout" from="message_timer" to="." method="_on_message_timer_timeout"]
